--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+title: ASHORE Blog
+SEOTitle: 飞飞的博客 | ASHORE Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: 3422878491@qq.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+keyword: "ASHORE, ASHORE Blog, 飞飞的博客 , zhaoqisheng, zhaoqisheng, cv, nlp, ML"
+url: "http://ASHORE1225.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/ASHORE1225/ASHORE1225.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
